final set of REPL changes